[ci skip] tweaks f4f44ea6c7282d3faa8c6f5174be95e76e7f4920

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2b5420f3",
+   "id": "f8232bcf",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9681bc28",
+   "id": "9ee2ac5e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1351ebf",
+   "id": "a969a39d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61198d89",
+   "id": "a04a199f",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c6fa6be",
+   "id": "57931722",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3667eadb",
+   "id": "af234c74",
    "metadata": {},
    "source": [
     "\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b01fbda9",
+   "id": "e3c4a12e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c2c84a",
+   "id": "d711da41",
    "metadata": {},
    "source": [
     "\n",
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73047bed",
+   "id": "d9b096d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2649004a",
+   "id": "2d0772f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9387ad27",
+   "id": "8a4f2f55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "153b90a3",
+   "id": "56e3bc0a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd50e874",
+   "id": "b3ae905a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee567c3d",
+   "id": "e0165499",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab3670d2",
+   "id": "42bc0fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "625ee060",
+   "id": "14bfb969",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a268b34",
+   "id": "7281ce43",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b0ae74b",
+   "id": "a97d3a9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8de45296",
+   "id": "11c0abb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bef205a9",
+   "id": "99a33d12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aff6d14d",
+   "id": "85241fde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "741ae4f0",
+   "id": "1d30b4f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6648fb71",
+   "id": "a39ef76f",
    "metadata": {},
    "source": [
     "\n",
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "953168b2",
+   "id": "9edc1996",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3c418c3",
+   "id": "bfc6aa24",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e64032b7",
+   "id": "63a4377d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0edce149",
+   "id": "7edcbe5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b043b50",
+   "id": "17cc1ca2",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "001643cc",
+   "id": "0afacb42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34c6f6fa",
+   "id": "6e12d992",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff15f4f6",
+   "id": "98bdf6cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69af2c60",
+   "id": "2db428a1",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "173685ff",
+   "id": "3918871c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "467a80f4",
+   "id": "6f8338dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c81035",
+   "id": "a3eed788",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e0d3b92",
+   "id": "1b63d9ff",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "358dc1d8",
+   "id": "97f9df5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "910177dd",
+   "id": "0440b0f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abd65522",
+   "id": "a2950a65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c6acf31",
+   "id": "273c799b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa7a0a5e",
+   "id": "8a108d59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,12 +783,13 @@
     "                \"future_24h\": s.glob(\"*_future_24h\"),\n",
     "                \"non_paris_weather\": s.glob(\"weather_*\") & ~s.glob(\"weather_*_paris_*\"),\n",
     "            },\n",
-    "            name=\"dropped_features\",\n",
+    "            name=\"dropped_cols\",\n",
     "        )\n",
     "    )\n",
     ").skb.apply(\n",
     "    HistGradientBoostingRegressor(\n",
     "        random_state=0,\n",
+    "        loss=skrub.choose_from([\"squared_error\", \"poisson\", \"gamma\"], name=\"loss\"),\n",
     "        learning_rate=skrub.choose_float(\n",
     "            0.01, 1, default=0.1, log=True, name=\"learning_rate\"\n",
     "        ),\n",
@@ -804,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9ac98f8",
+   "id": "c00ab09e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -832,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05cd766e",
+   "id": "61bdc189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf20ac39",
+   "id": "77e45efa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,12 +890,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4fdc13d",
+   "id": "58737da4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
-    "\n",
     "    index_generator = cv_splitter.split(prediction_time.skb.eval())\n",
     "\n",
     "    def splitter(X, y, index_generator):\n",
@@ -904,7 +904,6 @@
     "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
     "\n",
     "    results = []\n",
-    "\n",
     "    for (_, test_idx), pipeline in zip(\n",
     "        cv_splitter.split(prediction_time.skb.eval()), pipelines\n",
     "    ):\n",
@@ -928,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11a7a627",
+   "id": "1701c770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9038fa22",
+   "id": "c988a380",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dee9b6b",
+   "id": "3d924162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1148,7 @@
     "                    \"fold:N\",\n",
     "                    legend=altair.Legend(title=None),\n",
     "                ),\n",
-    "                detail= altair.Detail(\"fold:N\")\n",
+    "                detail=altair.Detail(\"fold:N\"),\n",
     "            )\n",
     "        )\n",
     "    return chart.resolve_scale(color=\"independent\")\n",
@@ -1163,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31e61852",
+   "id": "93b11b15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1179,7 @@
     "\n",
     "        residuals_by_hour_detailed = cv_prediction.with_columns(\n",
     "            [\n",
-    "                (pl.col(\"load_mw\") - pl.col(\"predicted_load_mw\")).alias(\"residual\"),\n",
+    "                (pl.col(\"predicted_load_mw\") - pl.col(\"load_mw\")).alias(\"residual\"),\n",
     "                pl.col(\"prediction_time\").dt.hour().alias(\"hour_of_day\"),\n",
     "            ]\n",
     "        )\n",
@@ -1246,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6fae992",
+   "id": "bac0c59c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1265,7 +1264,7 @@
     "\n",
     "        residuals_by_month_detailed = cv_prediction.with_columns(\n",
     "            [\n",
-    "                (pl.col(\"load_mw\") - pl.col(\"predicted_load_mw\")).alias(\"residual\"),\n",
+    "                (pl.col(\"predicted_load_mw\") - pl.col(\"load_mw\")).alias(\"residual\"),\n",
     "                pl.col(\"prediction_time\").dt.month().alias(\"month_of_year\"),\n",
     "            ]\n",
     "        )\n",
@@ -1331,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6350256",
+   "id": "2defb1f1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1341,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce122ac",
+   "id": "b5decadd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1363,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99f29c71",
+   "id": "0ce6ce9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5e755ea",
+   "id": "f051b189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05c99626",
+   "id": "661ed82c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af29c5c5",
+   "id": "3ed530aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dca5929",
+   "id": "3f151390",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1436,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c33950e",
+   "id": "43d4e61e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b0c8fb4",
+   "id": "ca437ed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3092b010",
+   "id": "ca808a0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4ee3d5",
+   "id": "b5da5c01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0027614d",
+   "id": "1e6d0446",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47aecc41",
+   "id": "176a2f1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b3d1835",
+   "id": "7d122508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c9c441a",
+   "id": "b1ef120d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55aeced8",
+   "id": "43baed31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "660fdc0c",
+   "id": "58d6992f",
    "metadata": {},
    "outputs": [],
    "source": []
