--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7a52f3cd",
+   "id": "a542d3e9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a668c928",
+   "id": "6afa19ad",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1babf668",
+   "id": "a2d97b31",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f8d2a4a",
+   "id": "0e4d1c3d",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66677991",
+   "id": "4928a9d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f31aa5e",
+   "id": "9c44f761",
    "metadata": {},
    "source": [
     "\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "910c2ca4",
+   "id": "eae6c648",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "095d768a",
+   "id": "160ea36c",
    "metadata": {},
    "source": [
     "\n",
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a33643b6",
+   "id": "0c3aa051",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28ed1b30",
+   "id": "bff57920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1854efe",
+   "id": "86b9655f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f20f69",
+   "id": "10926ac5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4965ef12",
+   "id": "0f84f519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f4abbe",
+   "id": "f885a5bf",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31159e74",
+   "id": "18a132f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8e0136",
+   "id": "a42d1d04",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beafc293",
+   "id": "0ef7b5b1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1cf3ab",
+   "id": "6d6466cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cb4dc9c",
+   "id": "3f46854e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85b5e211",
+   "id": "e3492965",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "999d5e69",
+   "id": "b3f278cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4712b44",
+   "id": "411c02f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54ee9c82",
+   "id": "bd20ee98",
    "metadata": {},
    "source": [
     "\n",
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bee82cd3",
+   "id": "298d0001",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0245d6dc",
+   "id": "8fd670b6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77478d01",
+   "id": "4c3d090e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85de9f11",
+   "id": "c9e893bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd1ca7cf",
+   "id": "f03e9b74",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a148ce",
+   "id": "d54910d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213d892b",
+   "id": "26301715",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3fb3132",
+   "id": "92d209b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "614c7ce7",
+   "id": "a3868ba8",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfd54ebb",
+   "id": "b66b75d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb7bb488",
+   "id": "f67f46d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841240ad",
+   "id": "36352deb",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae18ad5",
+   "id": "91409056",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32fc9617",
+   "id": "0eebb837",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fffc096d",
+   "id": "5cd3c315",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24623cdb",
+   "id": "a97ff81d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f91d6dc",
+   "id": "3ac3b0c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47f9d23e",
+   "id": "19cf348f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,12 +783,13 @@
     "                \"future_24h\": s.glob(\"*_future_24h\"),\n",
     "                \"non_paris_weather\": s.glob(\"weather_*\") & ~s.glob(\"weather_*_paris_*\"),\n",
     "            },\n",
-    "            name=\"dropped_features\",\n",
+    "            name=\"dropped_cols\",\n",
     "        )\n",
     "    )\n",
     ").skb.apply(\n",
     "    HistGradientBoostingRegressor(\n",
     "        random_state=0,\n",
+    "        loss=skrub.choose_from([\"squared_error\", \"poisson\", \"gamma\"], name=\"loss\"),\n",
     "        learning_rate=skrub.choose_float(\n",
     "            0.01, 1, default=0.1, log=True, name=\"learning_rate\"\n",
     "        ),\n",
@@ -804,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0a57787",
+   "id": "0db65e7a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -832,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3df8537",
+   "id": "7d8b0b25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9863284c",
+   "id": "113e660b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,12 +890,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffad834f",
+   "id": "7d6bb572",
    "metadata": {},
    "outputs": [],
    "source": [
     "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
-    "\n",
     "    index_generator = cv_splitter.split(prediction_time.skb.eval())\n",
     "\n",
     "    def splitter(X, y, index_generator):\n",
@@ -904,7 +904,6 @@
     "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
     "\n",
     "    results = []\n",
-    "\n",
     "    for (_, test_idx), pipeline in zip(\n",
     "        cv_splitter.split(prediction_time.skb.eval()), pipelines\n",
     "    ):\n",
@@ -928,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc3dbdae",
+   "id": "dec17a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5861c88",
+   "id": "93b7615a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc31046c",
+   "id": "c2f90f33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1148,7 @@
     "                    \"fold:N\",\n",
     "                    legend=altair.Legend(title=None),\n",
     "                ),\n",
-    "                detail= altair.Detail(\"fold:N\")\n",
+    "                detail=altair.Detail(\"fold:N\"),\n",
     "            )\n",
     "        )\n",
     "    return chart.resolve_scale(color=\"independent\")\n",
@@ -1163,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10999d14",
+   "id": "ed47184c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1179,7 @@
     "\n",
     "        residuals_by_hour_detailed = cv_prediction.with_columns(\n",
     "            [\n",
-    "                (pl.col(\"load_mw\") - pl.col(\"predicted_load_mw\")).alias(\"residual\"),\n",
+    "                (pl.col(\"predicted_load_mw\") - pl.col(\"load_mw\")).alias(\"residual\"),\n",
     "                pl.col(\"prediction_time\").dt.hour().alias(\"hour_of_day\"),\n",
     "            ]\n",
     "        )\n",
@@ -1246,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c779cf16",
+   "id": "b4e71592",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1265,7 +1264,7 @@
     "\n",
     "        residuals_by_month_detailed = cv_prediction.with_columns(\n",
     "            [\n",
-    "                (pl.col(\"load_mw\") - pl.col(\"predicted_load_mw\")).alias(\"residual\"),\n",
+    "                (pl.col(\"predicted_load_mw\") - pl.col(\"load_mw\")).alias(\"residual\"),\n",
     "                pl.col(\"prediction_time\").dt.month().alias(\"month_of_year\"),\n",
     "            ]\n",
     "        )\n",
@@ -1331,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "670cfbdd",
+   "id": "9d8ccf19",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1341,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb39317",
+   "id": "d0342162",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1363,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa02f4fb",
+   "id": "c45fb3bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "896cd63c",
+   "id": "3949a37d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e017f25b",
+   "id": "9f97ba20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8941a7d8",
+   "id": "221696ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1186377a",
+   "id": "dc545c45",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1436,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6adecb41",
+   "id": "d5e89ae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b71758",
+   "id": "b79e30b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e97659c4",
+   "id": "aff076fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "525e5c6b",
+   "id": "9146b921",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1edf2165",
+   "id": "20ddfdc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e21d48f",
+   "id": "51e1cc81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7e59abf",
+   "id": "e0f54167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1c8c0c",
+   "id": "0afe9408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce881875",
+   "id": "2f9736b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a753cf9",
+   "id": "d5c174d5",
    "metadata": {},
    "outputs": [],
    "source": []
